fix: correct swipe direction logic for touch interactions
The previous logic incorrectly determined swipe direction based on touch detection. This fix ensures consistent forward/backward navigation by simplifying the direction assignment to always forward on down and always backward on up, removing the unreliable touch detection condition.

--- a/index.html
+++ b/index.html
@@ -773,9 +773,9 @@
             preventDefault: true,
             tolerance: 12,
 
-            onDown: (self) => {
+                onDown: (self) => {
                 if (isAnimating) return;
-                const forward = self && self.isTouch ? false : true;
+                    const forward = true;
                 if (current === 2 && window.pfHorizontalSwiper) {
                     if (window.pfHorizontalSwiper.animating) return;
                     if (forward) {
@@ -791,10 +791,10 @@
                     }
                 }
                 gotoSection(current + (forward ? 1 : -1));
-            },
-            onUp: (self) => {
+                },
+                onUp: (self) => {
                 if (isAnimating) return;
-                const forward = self && self.isTouch ? true : false;
+                    const forward = false;
                 if (current === 2 && window.pfHorizontalSwiper) {
                     if (window.pfHorizontalSwiper.animating) return;
                     if (forward) {
