--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 
         .section {
             height: 100vh;
+            /* Fallback for browsers that do not support dvh */
+            height: 100dvh;
             width: 100vw;
             overflow: hidden;
         }
